# aiopyrus

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml
aiopyrus/: __init__.py  exceptions.py  sync.py  testing.py
aiopyrus/api/: __init__.py  session.py
aiopyrus/bot/: __init__.py  bot.py  dispatcher.py  middleware.py  router.py
aiopyrus/bot/filters/: __init__.py  base.py  builtin.py  magic.py
aiopyrus/bot/webhook/: __init__.py  server.py
aiopyrus/types/: __init__.py  base.py  catalog.py  file.py  form.py  params.py  task.py  user.py  webhook.py
aiopyrus/user/: __init__.py  client.py
aiopyrus/utils/: __init__.py  context.py  crypto.py  fields.py  rate_limiter.py
examples/: 01_quickstart.py  02_task_context.py  03_bot_webhook.py  04_bot_polling.py  05_data_management.py  06_approval_bot.py  07_middleware_errors.py  08_inbox_vs_register.py  09_auto_processing.py  10_polling_auto_approve.py  11_http_integration.py  12_embed_in_project.py
tests/: conftest.py  test_batch_operations.py  test_bot.py  test_client.py  test_client_coverage.py  test_client_extra.py  test_context.py  test_context_extra.py  test_crypto.py  test_dispatcher_extra.py  test_dispatcher_polling.py  test_docstrings.py  test_fields.py  test_filters.py  test_magic_extra.py  test_new_client_methods.py  test_rate_limiter.py  test_realistic_data.py  test_router.py  test_session.py  test_testing.py  test_types.py  test_types_extra.py  test_v03_features.py  test_v04_features.py  test_webhook_server.py  test_webhook_server_extra.py
