[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopyrus"
version = "0.1.0"
description = "Async Python library for Pyrus API — Aiogram-style, HTTPX-powered"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["pyrus", "api", "async", "bot", "httpx"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aiopyrus"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
