[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopyrus"
version = "0.2.0"
description = "Async Python framework for Pyrus API — bots, webhooks, polling, aiogram-style"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "pyrus", "pyrus-api", "async", "bot", "webhook",
    "polling", "httpx", "aiogram", "bpm", "workflow",
    "automation", "task-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/TimmekHW/aiopyrus"
Documentation = "https://github.com/TimmekHW/aiopyrus#readme"
Changelog = "https://github.com/TimmekHW/aiopyrus/releases"
Issues = "https://github.com/TimmekHW/aiopyrus/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aiopyrus"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
